SVN
* 2007-04-24:
    * Made changes necessary to get normaddr service tests to pass
    * Made changes necessary to get all but one geocode service tests to pass
* 2007-04-25
    * Made changes necessary to get ALL geocode service tests to pass
* 2007-04-26
    * Made changes necessary to get ALL tests to pass, including for routes
    * Changed Node and Edge inheritance so that subclasses classes point at
      base classes (with a Foreign Key) instead of the other way around.
      Base classes now have no knowledge of subclasses.
* 2007-04-27
    * Made changes necessary to get route tests to pass AND be *meaningful*;
      previously, the tests were passing, but the edges were out of order
      due to the fact that doing a "SELECT ... IN ..." doesn't necessarily
      return rows in the same order as the IDs in the IN clause.
    * Made some incidental changes affecting routing also.